--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -10,6 +10,7 @@ jobs:
   labeler:
     permissions:
       contents: write
+      issues: write
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
