--- a/tox.ini
+++ b/tox.ini
@@ -3,15 +3,15 @@ isolated_build = true
 requires =
     tox>=4.2
 env_list =
-    py313-django{52,51}
-    py312-django{52,51,50,42}
-    py311-django{52,51,50,42}
-    py310-django{52,51,50,42}
-    py39-django{42}
+    py313-django{52}
+    py312-django{52}
+    py311-django{52}
+    py310-django{52}
 
 [testenv]
 set_env =
     PYTHONDONTWRITEBYTECODE=1
+    COVERAGE_FILE = {toxinidir}/.coverage.{envname}
 dependency_groups =
     dev
 deps =
@@ -20,5 +20,95 @@ deps =
     django50: Django>=5.0,<5.1
     django42: Django>=4.2,<5.0
 commands =
+    coverage erase
     python \
-      -m pytest {posargs:tests}
+      -m pytest --cov=django_prodserver --cov-report= --cov-config={toxinidir}/pyproject.toml {posargs:tests}
+    coverage report
+    coverage xml
+
+[testenv:waitress]
+set_env =
+    PYTHONDONTWRITEBYTECODE=1
+    COVERAGE_FILE = {toxinidir}/.coverage.{envname}
+dependency_groups =
+    dev
+deps =
+    django52: Django>=5.2a1,<6.0
+    django51: Django>=5.1,<5.2
+    django50: Django>=5.0,<5.1
+    django42: Django>=4.2,<5.0
+    waitress
+commands =
+    coverage erase
+    python \
+      -m pytest --cov=django_prodserver --cov-report= --cov-config={toxinidir}/pyproject.toml {posargs:tests}
+    coverage report
+    coverage xml
+
+[testenv:gunicorn]
+set_env =
+    PYTHONDONTWRITEBYTECODE=1
+    COVERAGE_FILE = {toxinidir}/.coverage.{envname}
+dependency_groups =
+    dev
+deps =
+    django52: Django>=5.2a1,<6.0
+    django51: Django>=5.1,<5.2
+    django50: Django>=5.0,<5.1
+    django42: Django>=4.2,<5.0
+    gunicorn
+commands =
+    coverage erase
+    python \
+      -m pytest --cov=django_prodserver --cov-report= --cov-config={toxinidir}/pyproject.toml {posargs:tests}
+    coverage report
+    coverage xml
+
+
+[testenv:celery]
+set_env =
+    PYTHONDONTWRITEBYTECODE=1
+    COVERAGE_FILE = {toxinidir}/.coverage.{envname}
+dependency_groups =
+    dev
+deps =
+    django52: Django>=5.2a1,<6.0
+    django51: Django>=5.1,<5.2
+    django50: Django>=5.0,<5.1
+    django42: Django>=4.2,<5.0
+    celery
+commands =
+    coverage erase
+    python \
+      -m pytest --cov=django_prodserver --cov-report= --cov-config={toxinidir}/pyproject.toml {posargs:tests}
+    coverage report
+    coverage xml
+
+
+[testenv:uvicorn]
+set_env =
+    PYTHONDONTWRITEBYTECODE=1
+    COVERAGE_FILE = {toxinidir}/.coverage.{envname}
+dependency_groups =
+    dev
+deps =
+    django52: Django>=5.2a1,<6.0
+    django51: Django>=5.1,<5.2
+    django50: Django>=5.0,<5.1
+    django42: Django>=4.2,<5.0
+    uvicorn
+commands =
+    coverage erase
+    python \
+      -m pytest --cov=django_prodserver --cov-report= --cov-config={toxinidir}/pyproject.toml {posargs:tests}
+    coverage report
+    coverage xml
+
+[testenv:coverage]
+deps = coverage[toml]
+skip_install = true
+commands =
+    coverage combine
+    coverage report
+    coverage xml
+depends = py312-django51, py311-django51, py310-django51, py39-django42
