chore: fix tests, typing etc

--- a/tox.ini
+++ b/tox.ini
@@ -16,9 +16,6 @@ dependency_groups =
     dev
 deps =
     django52: Django>=5.2a1,<6.0
-    django51: Django>=5.1,<5.2
-    django50: Django>=5.0,<5.1
-    django42: Django>=4.2,<5.0
 commands =
     coverage erase
     python \
@@ -34,9 +31,6 @@ dependency_groups =
     dev
 deps =
     django52: Django>=5.2a1,<6.0
-    django51: Django>=5.1,<5.2
-    django50: Django>=5.0,<5.1
-    django42: Django>=4.2,<5.0
     waitress
 commands =
     coverage erase
@@ -53,9 +47,6 @@ dependency_groups =
     dev
 deps =
     django52: Django>=5.2a1,<6.0
-    django51: Django>=5.1,<5.2
-    django50: Django>=5.0,<5.1
-    django42: Django>=4.2,<5.0
     gunicorn
 commands =
     coverage erase
@@ -73,9 +64,6 @@ dependency_groups =
     dev
 deps =
     django52: Django>=5.2a1,<6.0
-    django51: Django>=5.1,<5.2
-    django50: Django>=5.0,<5.1
-    django42: Django>=4.2,<5.0
     celery
 commands =
     coverage erase
@@ -93,9 +81,6 @@ dependency_groups =
     dev
 deps =
     django52: Django>=5.2a1,<6.0
-    django51: Django>=5.1,<5.2
-    django50: Django>=5.0,<5.1
-    django42: Django>=4.2,<5.0
     uvicorn
 commands =
     coverage erase
@@ -107,8 +92,11 @@ commands =
 [testenv:coverage]
 deps = coverage[toml]
 skip_install = true
+changedir = {toxinidir}
+set_env =
+    COVERAGE_FILE =
 commands =
     coverage combine
     coverage report
     coverage xml
-depends = py312-django51, py311-django51, py310-django51, py39-django42
+depends = py312-django52, waitress, gunicorn, celery, uvicorn
