chore: linting & updates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,9 @@ jobs:
               - gunicorn
             os:
               - ubuntu-latest
+          - backend:
+              - gunicorn
+            os:
               - macOS-latest
     runs-on: ${{ matrix.os }}
     steps:
