--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,7 @@ classifiers = [
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Framework :: Django",
-    "Framework :: Django :: 4.2",
-    "Framework :: Django :: 5.0",
-    "Framework :: Django :: 5.1",
     "Framework :: Django :: 5.2",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Software Development :: Libraries",
@@ -38,6 +32,7 @@ urls.repository = "https://github.com/nanorepublica/django-prodserver"
 gunicorn = ["gunicorn>=23.0.0"]
 django-tasks = ["django-tasks>=0.7.0"]
 celery = ["celery>=5.5.2"]
+django-q2 = ["django-q2>=1.6.0", "django-picklefield"]
 uvicorn = ["uvicorn>=0.34.2"]
 waitress = ["waitress>=3.0.2"]
 
