docs: make the docs more concise

--- a/.github/labels.toml
+++ b/.github/labels.toml
@@ -1,4 +1,4 @@
-[breaking]
+[marketing]
 color = "f416d1"
 name = "marketing"
 description = "Issues related to spreading the use and adoption of the project"
